feat: 레이아웃 정리 및 api 호출 끝

--- a/src/css/pages/performerList.module.css
+++ b/src/css/pages/performerList.module.css
@@ -16,6 +16,11 @@
   margin-bottom: 50px;
 }
 
+.Box {
+  display: flex;
+  flex-direction: column;
+}
+
 table {
   /* background-color: #ffffff; */
   width: 100%;
