--- a/src/css/pages/performerDetailList.module.css
+++ b/src/css/pages/performerDetailList.module.css
@@ -5,11 +5,19 @@
   width: 89%;
   min-height: 500px;
 }
+.name {
+  display: flex;
+  width: 247px;
+  height: 29px;
+  flex-direction: column;
+  justify-content: center;
+  flex-shrink: 0;
+}
 
 /* ✅ position: relative 추가 */
 .infoBox {
   width: 1061px;
-  height: 600px;
+  padding-bottom: 36px;
   flex-shrink: 0;
   border-radius: 10px;
   background: #f5f6f8;
@@ -25,19 +33,33 @@
   font-size: 32px;
   font-style: normal;
   font-weight: 500;
-  padding-top: 35px;
-  margin-bottom: 25px;
+  padding-top: 15px;
+  margin-bottom: 15px;
 }
 
 .infoMainBox {
   margin: 0 66px;
   display: flex;
   align-items: center;
+  justify-content: center;
   width: 929px;
-  height: 415px;
   flex-shrink: 0;
   border-radius: 10px;
   background: #fff;
+  padding-top: 19px;
+  padding-left: 0px;
+  padding-rifht: 25px;
+  padding-bottom: 19px;
+}
+.infoMainSmallBox {
+  width: 881px;
+  color: #000;
+
+  font-family: "Noto Sans KR";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
 }
 
 .infoMainContent {
@@ -92,6 +114,31 @@
   margin-left: 40px;
 }
 
+.performBox {
+  display: flex;
+  align-items: center;
+  width: 929px;
+  height: 46px;
+  flex-shrink: 0;
+  border-radius: 10px;
+  background: #fff;
+}
+
+.urlBox {
+  width: 881px;
+  height: 35px;
+  flex-shrink: 0;
+  color: #5290ff;
+  font-family: "Noto Sans KR";
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 150% */
+  padding-left: 30px;
+  display: flex;
+  align-items: center;
+}
+
 .portfolioLayout {
   display: flex;
   flex-direction: column;
@@ -137,4 +184,10 @@
   font-family: "Noto Sans KR";
   font-size: 16px; /* 폰트 사이즈 16px로 변경 */
   color: #999;
+}
+
+.goBackBox {
+  margin-top: 40px;
+  margin-bottom: 60px;
+  font-size: 16px;
 }
