--- a/src/css/pages/kanPaymentPage.module.css
+++ b/src/css/pages/kanPaymentPage.module.css
@@ -265,7 +265,7 @@
 
   flex-shrink: 0;
   border-radius: 10px;
-  background: red;
+  /* background: red; */
 }
 .rentalLabelBox {
   display: flex;
@@ -288,7 +288,7 @@
   flex-shrink: 0;
   border-radius: 10px;
   background: blue;
-  margin-left: 90px;
+  /* margin-left: 90px; */
 }
 
 .payMentButton {
